[package]
name = "gst-ximageredux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.18.0", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.18.7", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.18.0", features = ["v1_16"] }
# gst-video = { package = "gstreamer-video", version = "0.18.7", features = ["v1_16"] }
once_cell = "1.0"

[lib]
name = "ximageredux"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"