[package]
name = "gst-plugin-ximageredux"
version = "0.1.5"
edition = "2021"
description = "X11 Window Capture Engine"
repository = "https://github.com/ImTheSquid/gst-ximageredux"
homepage = "https://github.com/ImTheSquid/gst-ximageredux"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.19", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.19", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.19", features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.19", features = ["v1_16"] }
once_cell = "1.0"
xcb = { version = "1", features = ["xfixes"] }
derivative = "2.2.0"
anyhow = "1.0.58"

[lib]
name = "ximageredux"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
